--- a/data/manifest.json
+++ b/data/manifest.json
@@ -1,6 +1,6 @@
 [
   "stars_0_20_LY.json",
-  "stars_20_30_LY.json"
-  "stars_30_40_LY.json"
+  "stars_20_30_LY.json",
+  "stars_30_40_LY.json",
   "stars_40_50_LY.json"
 ]
