--- a/data/manifest.json
+++ b/data/manifest.json
@@ -2,5 +2,8 @@
   "stars_0_20_LY.json",
   "stars_20_30_LY.json",
   "stars_30_40_LY.json",
-  "stars_40_50_LY.json"
+  "stars_40_50_LY.json",
+  "stars_50_60_LY.json",
+  "stars_60_70_LY.json",
+  "stars_70_80_LY.json"
 ]
