--- a/data/manifest.json
+++ b/data/manifest.json
@@ -5,5 +5,7 @@
   "stars_40_50_LY.json",
   "stars_50_60_LY.json",
   "stars_60_70_LY.json",
-  "stars_70_80_LY.json"
+  "stars_70_80_LY.json",
+  "stars_80_90_LY.json",
+  "stars_90_100_LY.json"
 ]
